--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,14 @@ body {
     max-width: none;
   }
 }
+
+.text-none {
+  display: none;
+  visibility: none;
+}
+
+.number-block {
+  font-weight: 900;
+  font-size: 2.875rem;
+  margin-right: 0.75rem;
+}
