--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,17 @@ body {
   }
 }
 
+.text-none {
+  display: none;
+  visibility: none;
+}
+
+.number-block {
+  font-weight: 900;
+  font-size: 2.875rem;
+  margin-right: 0.75rem;
+}
+
 /*--- Миксин для адаптива ---*/
 /*---Вызов свойства---
 @include adaptive-value("padding", 50, 20, 0);
@@ -547,7 +558,7 @@ body {
   align-items: center;
 }
 .header__logo {
-  width: 130px;
+  min-width: 130px;
   opacity: 0.7;
   transition: opacity 0.3s ease-in-out;
 }
@@ -565,8 +576,33 @@ body {
   justify-content: space-between;
   margin-left: 2.5rem;
 }
+@media (max-width: 1024px) {
+  .header__nav {
+    margin-left: 1rem;
+  }
+}
+@media (max-width: 48rem) {
+  .header__nav {
+    justify-content: flex-end;
+  }
+}
 .header__menu-list {
   display: flex;
+}
+@media (max-width: 48rem) {
+  .header__menu-list {
+    flex-direction: column;
+    align-items: center;
+    overflow: scroll;
+    height: 100vh;
+    background: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    position: absolute;
+    left: 100%;
+    top: 5.625rem;
+    z-index: 1;
+    transition: left 0.3s ease-in-out;
+  }
 }
 .header__menu-item {
   font-weight: 700;
@@ -577,8 +613,29 @@ body {
   color: #ff3f3a;
   transition: color 0.3s ease-in-out;
 }
+@media (max-width: 1024px) {
+  .header__menu-item {
+    margin: 0 0.5rem;
+  }
+}
+@media (max-width: 48rem) {
+  .header__menu-item {
+    padding: 1.5625rem;
+    font-size: 1.5rem;
+  }
+}
 .header__btns {
   display: flex;
+}
+@media (max-width: 48rem) {
+  .header__btns {
+    margin-right: 1rem;
+  }
+}
+@media (max-width: 33.125rem) {
+  .header__btns {
+    display: block;
+  }
 }
 .header__btn-consalt {
   display: block;
@@ -597,6 +654,16 @@ body {
   color: #ff3f3a;
   transition: 0.2s ease-in-out;
 }
+@media (max-width: 1024px) {
+  .header__btn-consalt {
+    padding: 1rem;
+  }
+}
+@media (max-width: 33.125rem) {
+  .header__btn-consalt {
+    margin-bottom: 0.9375rem;
+  }
+}
 .header__btn-login {
   margin-left: 4em;
   font-weight: 700;
@@ -613,6 +680,67 @@ body {
   top: 50%;
   transform: translateY(-50%);
 }
+@media (max-width: 64em) {
+  .header__btn-login::before {
+    left: -1.4em;
+  }
+}
+@media (max-width: 64em) {
+  .header__btn-login {
+    margin-left: 2rem;
+  }
+}
+
+.header__burger {
+  display: none;
+}
+@media (max-width: 48rem) {
+  .header__burger {
+    display: block;
+  }
+}
+
+.menu-btn {
+  width: 3.125rem;
+  height: 1.5625rem;
+  position: relative;
+}
+.menu-btn span {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #ff613a;
+  transition: 0.3s;
+}
+.menu-btn span:first-child {
+  position: absolute;
+  top: 0;
+}
+.menu-btn span:last-child {
+  position: absolute;
+  bottom: 0;
+}
+
+.active {
+  left: 0;
+}
+
+.active-btn span {
+  background: #424551;
+  transition: 0.3s;
+}
+.active-btn span:first-child {
+  top: 50%;
+  transform: rotate(-45deg);
+}
+.active-btn span:nth-child(2) {
+  display: none;
+  visibility: hidden;
+}
+.active-btn span:last-child {
+  top: 50%;
+  transform: rotate(45deg);
+}
 
 .first {
   background: url("../img/header/bg.png") center/cover no-repeat;
@@ -622,12 +750,17 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-row: 0.7fr 0.3fr;
-  padding-top: 4rem;
+  padding-top: 6rem;
   align-items: center;
 }
 @media (max-height: 590px) {
   .first__body {
     height: 100%;
+  }
+}
+@media (max-width: 33.125rem) {
+  .first__body {
+    padding-top: 8.125rem;
   }
 }
 .first__showreel {
@@ -689,8 +822,18 @@ body {
 .first__btn:first-child {
   margin-right: 1.5rem;
 }
+.first__image {
+  position: relative;
+  padding: 0px 0px 92% 0px;
+}
 .first__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .first__stats {
   grid-column-start: span 2;
@@ -718,15 +861,4 @@ body {
 }
 .first__stats-item:first-child::before {
   display: none;
-}
-
-.text-none {
-  display: none;
-  visibility: none;
-}
-
-.number-block {
-  font-weight: 900;
-  font-size: 2.875rem;
-  margin-right: 0.75rem;
 }
