--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,7 @@ body {
   padding: 1.25rem 0;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  background: rgba(255, 219, 213, 0.6);
 }
 .header__body {
   display: flex;
@@ -559,7 +560,7 @@ body {
 }
 .header__logo {
   min-width: 130px;
-  opacity: 0.7;
+  opacity: 0.8;
   transition: opacity 0.3s ease-in-out;
 }
 .header__logo:hover {
@@ -607,11 +608,9 @@ body {
 .header__menu-item {
   font-weight: 700;
   margin: 0 1.25em;
-  transition: color 0.2s ease-in-out;
 }
 .header__menu-item:hover {
   color: #ff3f3a;
-  transition: color 0.3s ease-in-out;
 }
 @media (max-width: 1024px) {
   .header__menu-item {
@@ -669,6 +668,7 @@ body {
   font-weight: 700;
   position: relative;
   color: #424551;
+  opacity: 0.7;
 }
 .header__btn-login::before {
   content: "";
@@ -684,6 +684,9 @@ body {
   .header__btn-login::before {
     left: -1.4em;
   }
+}
+.header__btn-login:hover {
+  opacity: 1;
 }
 @media (max-width: 64em) {
   .header__btn-login {
@@ -743,6 +746,7 @@ body {
 }
 
 .first {
+  position: relative;
   background: url("../img/header/bg.png") center/cover no-repeat;
 }
 .first__body {
@@ -752,21 +756,29 @@ body {
   grid-row: 0.7fr 0.3fr;
   padding-top: 6rem;
   align-items: center;
+  position: relative;
 }
 @media (max-height: 590px) {
   .first__body {
     height: 100%;
   }
 }
-@media (max-width: 33.125rem) {
+@media (max-width: 48em) {
   .first__body {
-    padding-top: 8.125rem;
+    display: block;
+  }
+}
+@media (max-width: 33.125em) {
+  .first__body {
+    padding-top: 9.375rem;
   }
 }
 .first__showreel {
   display: flex;
   align-items: center;
   margin-bottom: 2.1875rem;
+  position: relative;
+  z-index: 5;
 }
 .first__showreel label {
   color: #1e212c;
@@ -779,6 +791,9 @@ body {
   background: #ff3f3a;
   border-radius: 50%;
   position: relative;
+  opacity: 0.7;
+  transition: 0.3s;
+  z-index: 5;
 }
 .first__btn-play::before {
   content: "";
@@ -787,7 +802,7 @@ body {
   width: 16px;
   height: 16px;
 }
-.first__btn-play::after {
+.first__btn-play:hover::after {
   content: "";
   position: absolute;
   display: block;
@@ -799,6 +814,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: 0.3s;
+}
+.first__btn-play:hover {
+  opacity: 1;
+  transition: 0.3s;
 }
 .first__title {
   color: #1e212c;
@@ -807,9 +827,19 @@ body {
   width: 90%;
   line-height: 1.3;
   margin-bottom: 3.75rem;
+  position: relative;
+  z-index: 5;
+}
+@media (max-width: 64em) {
+  .first__title {
+    width: 100%;
+    font-size: 3.125rem;
+  }
 }
 .first__btns {
   display: flex;
+  position: relative;
+  z-index: 5;
 }
 .first__btn {
   display: block;
@@ -818,9 +848,15 @@ body {
   padding: 1rem 2.5rem;
   font-weight: 700;
   color: #ff3f3a;
+  transition: 0.3s;
 }
 .first__btn:first-child {
   margin-right: 1.5rem;
+}
+.first__btn:hover {
+  color: #fff;
+  background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+  transition: 0.3s;
 }
 .first__image {
   position: relative;
@@ -835,12 +871,46 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
 }
+@media (max-width: 48em) {
+  .first__image img {
+    position: relative;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media (max-width: 48em) {
+  .first__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    opacity: 0.3;
+  }
+}
+@media (max-width: 33.125em) {
+  .first__image {
+    top: 10%;
+  }
+}
 .first__stats {
   grid-column-start: span 2;
+  position: relative;
+  z-index: 5;
+}
+@media (max-width: 64em) {
+  .first__stats {
+    margin-top: 1.5625rem;
+  }
 }
 .first__stats-list {
   display: flex;
   justify-content: space-between;
+}
+@media (max-width: 48em) {
+  .first__stats-list {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 .first__stats-item {
   color: #1e212c;
@@ -858,6 +928,12 @@ body {
   position: relative;
   left: -25%;
   transform: translateX(25%);
+}
+@media (max-width: 48em) {
+  .first__stats-item::before {
+    display: none;
+    visibility: hidden;
+  }
 }
 .first__stats-item:first-child::before {
   display: none;
