--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -1,4 +1,5 @@
 .first {
+	position: relative;
 	background: url("../img/header/bg.png") center/cover no-repeat;
 	&__body {
 		height: 100vh;
@@ -7,18 +8,25 @@
 		grid-row: 0.7fr 0.3fr;
 		padding-top: 6rem;
 		align-items: center;
+		position: relative;
 		@media (max-height: 590px) {
 			height: 100%;
 		}
-		@media (max-width: rem(530)) {
-			padding-top: rem(130);
+		@media (max-width: em(768)) {
+			display: block;
+		}
+		@media (max-width: em(530)) {
+			padding-top: rem(150);
 		}
 	}
-
+	&__content {
+	}
 	&__showreel {
 		display: flex;
 		align-items: center;
 		margin-bottom: rem(35);
+		position: relative;
+		z-index: 5;
 		label {
 			color: #1e212c;
 			font-weight: 700;
@@ -32,6 +40,9 @@
 		background: #ff3f3a;
 		border-radius: 50%;
 		position: relative;
+		opacity: 0.7;
+		transition: 0.3s;
+		z-index: 5;
 		&::before {
 			content: "";
 			display: block;
@@ -39,7 +50,7 @@
 			width: 16px;
 			height: 16px;
 		}
-		&::after {
+		&:hover::after {
 			content: "";
 			position: absolute;
 			display: block;
@@ -51,6 +62,11 @@
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
+			transition: 0.3s;
+		}
+		&:hover {
+			opacity: 1;
+			transition: 0.3s;
 		}
 	}
 
@@ -61,10 +77,19 @@
 		width: 90%;
 		line-height: 1.3;
 		margin-bottom: rem(60);
+		position: relative;
+		z-index: 5;
+
+		@media (max-width: em(1024)) {
+			width: 100%;
+			font-size: rem(50);
+		}
 	}
 
 	&__btns {
 		display: flex;
+		position: relative;
+		z-index: 5;
 	}
 
 	&__btn {
@@ -74,8 +99,14 @@
 		padding: 1rem 2.5rem;
 		font-weight: 700;
 		color: #ff3f3a;
+		transition: 0.3s;
 		&:first-child {
 			margin-right: rem(24);
+		}
+		&:hover {
+			color: #fff;
+			background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+			transition: 0.3s;
 		}
 	}
 
@@ -90,16 +121,39 @@
 			width: 100%;
 			height: 100%;
 			object-fit: contain;
+			@media (max-width: em(768)) {
+				position: relative;
+				object-fit: cover;
+			}
+		}
+		@media (max-width: em(768)) {
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 1;
+			opacity: 0.3;
+		}
+		@media (max-width: em(530)) {
+			top: 10%;
 		}
 	}
 
 	&__stats {
 		grid-column-start: span 2;
+		position: relative;
+		z-index: 5;
+		@media (max-width: em(1024)) {
+			margin-top: rem(25);
+		}
 	}
 
 	&__stats-list {
 		display: flex;
 		justify-content: space-between;
+		@media (max-width: em(768)) {
+			flex-direction: column;
+			justify-content: center;
+		}
 	}
 
 	&__stats-item {
@@ -117,13 +171,13 @@
 			position: relative;
 			left: -25%;
 			transform: translateX(25%);
+			@media (max-width: em(768)) {
+				display: none;
+				visibility: hidden;
+			}
 		}
 		&:first-child::before {
 			display: none;
 		}
-	}
-}
-.fitst {
-	&__content {
 	}
 }
