--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,8 +7,7 @@
 
 /*--- Стили разделов ---*/
 @import "_header";
-//@import "_menu";
 @import "_first";
-//@import "_about";
+@import "_about";
 //@import "_form";
 //@import "_footer";
