--- a/css/style.css
+++ b/css/style.css
@@ -597,7 +597,7 @@ body {
   padding: 1.25rem 0;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
-  background: rgba(255, 219, 213, 0.6);
+  background: rgba(255, 219, 213, 0.7);
 }
 .header__body {
   display: flex;
@@ -642,13 +642,20 @@ body {
     align-items: center;
     overflow: scroll;
     height: 100vh;
-    background: rgba(255, 255, 255, 0.7);
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+    background: rgba(252, 198, 189, 0.7);
     width: 100%;
     position: absolute;
     left: 100%;
     top: 5.625rem;
     z-index: 1;
     transition: left 0.3s ease-in-out;
+  }
+}
+@media (max-width: 33.125rem) {
+  .header__menu-list {
+    top: 7.8125rem;
   }
 }
 .header__menu-item {
@@ -787,9 +794,9 @@ body {
   grid-template-columns: 1fr 1fr;
   grid-row: 0.7fr 0.3fr;
   padding-top: 6rem;
-  padding-bottom: 5rem;
   align-items: center;
   position: relative;
+  padding-bottom: 5rem;
 }
 @media (max-height: 590px) {
   .first__body {
@@ -962,8 +969,9 @@ body {
 }
 
 .about {
-  padding-top: calc(35px + 172 * ((100vw - 320px) /760));
-  padding-top: calc(35px + 145 * ((100vw - 320px) /760));
+  padding-top: 16.9%;
+  padding-bottom: 14.7%;
+  background: url("../img/bg-about.png") center/contain no-repeat;
 }
 .about__body {
   width: 100%;
@@ -1015,4 +1023,127 @@ body {
 }
 .about__item:last-child {
   margin-bottom: 0;
+}
+.featured {
+  padding-bottom: 14.7%;
+}
+.featured__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-bottom: 5.6%;
+}
+@media (max-width: 48rem) {
+  .featured__top {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 48rem) {
+  .featured__heading {
+    margin-bottom: 2%;
+  }
+}
+.featured__btn {
+  max-height: 3.4375rem;
+}
+.featured__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.875rem;
+}
+.featured__item {
+  flex: 1 1 calc(50% - 4rem);
+  display: flex;
+  border: 1px solid #e5e8ed;
+  box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+  border-radius: 4px;
+  transition: transform 0.3s;
+}
+@media (max-width: 48rem) {
+  .featured__item {
+    flex: 1 1 calc(100% - 1.875rem);
+  }
+}
+.featured__item:hover {
+  transition: transform 0.3s;
+  transform: scale(1.1);
+  box-shadow: 0px 0px 18px 10px rgba(154, 156, 165, 0.3);
+  z-index: 5;
+}
+
+.featured-item__photo {
+  flex: 1 0 13.375rem;
+}
+@media (max-width: 48em) {
+  .featured-item__photo {
+    flex: 0 0 13.375rem;
+  }
+}
+.featured-item__photo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.featured-item__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 2rem;
+}
+.featured-item__category span {
+  display: inline-block;
+  font-size: 0.875rem;
+  line-height: 150%;
+  padding: 0.0625rem 0.5rem;
+  color: #fff;
+  background: #03cea4;
+  border-radius: 4px;
+  margin-bottom: 1.25rem;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+.featured-item__category span:hover {
+  transition: opacity 0.3s;
+  opacity: 1;
+}
+.featured-item__title-link {
+  display: block;
+}
+.featured-item__title {
+  font-weight: 700;
+  font-size: 1.25rem;
+  line-height: 150%;
+  color: #1e212c;
+  margin-bottom: 1.25rem;
+  transition: color 0.2s;
+}
+.featured-item__title:hover {
+  color: #ff4242;
+  transition: color 0.2s;
+}
+.featured-item__descr {
+  line-height: 150%;
+}
+.featured-item__price {
+  color: #ff4242;
+  font-weight: 700;
+  font-size: 1.125rem;
+}
+
+.category-marketing span {
+  background: #03cea4;
+}
+
+.category-management span {
+  background: #5a87fc;
+}
+
+.category-hr span {
+  background: #f89828;
+}
+
+.category-design span {
+  background: #f52f6e;
 }
