--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,13 +4,11 @@
 	width: 100%;
 	padding: 1.25rem 0;
 	backdrop-filter: blur(5px);
-	background: rgba(255, 219, 213, 0.6);
+	background: rgba(255, 219, 213, 0.7);
 	&__body {
 		display: flex;
 		width: 100%;
 		align-items: center;
-		@media (max-width: rem(530)) {
-		}
 	}
 
 	&__logo {
@@ -53,13 +51,18 @@
 			align-items: center;
 			overflow: scroll;
 			height: 100vh;
-			background: rgba(255, 255, 255, 0.7);
+			backdrop-filter: blur(5px);
+			background: rgba(252, 198, 189, 0.7);
 			width: 100%;
 			position: absolute;
 			left: 100%;
 			top: rem(90);
 			z-index: 1;
 			transition: left 0.3s ease-in-out;
+		}
+
+		@media (max-width: rem(530)) {
+			top: rem(125);
 		}
 	}
 
