--- a/css/style.css
+++ b/css/style.css
@@ -628,9 +628,10 @@ body {
     margin-left: 1rem;
   }
 }
-@media (max-width: 48rem) {
+@media (max-width: 48em) {
   .header__nav {
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
   }
 }
 .header__menu-list {
@@ -648,14 +649,14 @@ body {
     width: 100%;
     position: absolute;
     left: 100%;
-    top: 5.625rem;
+    top: 8.125rem;
     z-index: 1;
     transition: left 0.3s ease-in-out;
   }
 }
-@media (max-width: 33.125rem) {
+@media (max-width: 28.375em) {
   .header__menu-list {
-    top: 7.8125rem;
+    top: 10.625rem;
   }
 }
 .header__menu-item {
@@ -678,15 +679,11 @@ body {
 }
 .header__btns {
   display: flex;
+  flex-wrap: wrap;
 }
 @media (max-width: 48rem) {
   .header__btns {
-    margin-right: 1rem;
-  }
-}
-@media (max-width: 33.125rem) {
-  .header__btns {
-    display: block;
+    justify-content: flex-end;
   }
 }
 .header__btn-consalt {
@@ -739,6 +736,7 @@ body {
 @media (max-width: 48rem) {
   .header__burger {
     display: block;
+    margin-bottom: 0.9375rem;
   }
 }
 
@@ -746,6 +744,7 @@ body {
   width: 3.125rem;
   height: 1.5625rem;
   position: relative;
+  margin-top: 5px;
 }
 .menu-btn span {
   display: block;
@@ -806,11 +805,12 @@ body {
 @media (max-width: 48em) {
   .first__body {
     display: block;
+    padding-top: 10.625rem;
   }
 }
-@media (max-width: 33.125em) {
+@media (max-width: 28.375em) {
   .first__body {
-    padding-top: 9.375rem;
+    padding-top: 11.25rem;
   }
 }
 .first__showreel {
@@ -910,15 +910,10 @@ body {
 @media (max-width: 48em) {
   .first__image {
     position: absolute;
-    top: 0;
+    top: 20%;
     left: 0;
     z-index: 1;
     opacity: 0.3;
-  }
-}
-@media (max-width: 33.125em) {
-  .first__image {
-    top: 10%;
   }
 }
 .first__stats {
@@ -960,12 +955,17 @@ body {
 }
 @media (max-width: 48em) {
   .first__stats-item::before {
-    display: none;
-    visibility: hidden;
+    left: 0;
+    margin-right: 15px;
   }
 }
 .first__stats-item:first-child::before {
   display: none;
+}
+@media (max-width: 48em) {
+  .first__stats-item:first-child::before {
+    display: block;
+  }
 }
 
 .about {
@@ -1081,11 +1081,22 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
 }
+@media (max-width: 26.5625em) {
+  .featured-item__photo {
+    flex: 0 0 6.25rem;
+  }
+}
 .featured-item__content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 0 2rem;
+}
+@media (max-width: 26.5625em) {
+  .featured-item__content {
+    margin: 0;
+    padding: 0.9375rem;
+  }
 }
 .featured-item__category span {
   display: inline-block;
@@ -1141,4 +1152,47 @@ body {
 
 .category-design span {
   background: #f52f6e;
+}
+
+.benefits {
+  padding-bottom: 18%;
+}
+.benefits__subtitle {
+  text-align: center;
+}
+.benefits__title {
+  text-align: center;
+  margin-bottom: 3.75rem;
+}
+.benefits__tab-link-list {
+  display: flex;
+  margin-bottom: 3.75rem;
+}
+.benefits__tab-link {
+  flex: 0 1 25%;
+  text-align: center;
+  padding: 0.625rem 0;
+  cursor: pointer;
+  border: 1px solid transparent;
+  line-height: 160%;
+  font-weight: 700;
+}
+.benefits__tab-link:hover {
+  border: 1px solid #ff3f3a;
+  border-radius: 4px;
+}
+.benefits__tab-link.active {
+  border: 1px solid #ff3f3a;
+  border-radius: 4px;
+  color: #ff3f3a;
+}
+.benefits__tab-item {
+  background: rgb(74, 74, 189);
+  height: 200px;
+  color: azure;
+  font-size: 40px;
+}
+
+.hidden {
+  display: none;
 }
