--- a/css/style.css
+++ b/css/style.css
@@ -1155,7 +1155,7 @@ body {
 }
 
 .benefits {
-  padding-bottom: 18%;
+  padding-bottom: 9.5%;
 }
 .benefits__subtitle {
   text-align: center;
@@ -1187,12 +1187,35 @@ body {
   color: #ff3f3a;
 }
 .benefits__tab-item {
-  background: rgb(74, 74, 189);
-  height: 200px;
-  color: azure;
-  font-size: 40px;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+}
+.benefits__tab-item.active {
+  display: flex;
 }
 
 .hidden {
   display: none;
+}
+
+.tab-item__text {
+  flex: 0 1 40.5%;
+}
+.tab-item__title {
+  font-weight: 900;
+  font-size: 2rem;
+  line-height: 130%;
+  color: #1e212c;
+  margin-bottom: 1.5rem;
+}
+.tab-item__descr {
+  line-height: 160%;
+}
+.tab-item__image {
+  flex: 0 1 50%;
+  max-height: 400px;
+}
+.tab-item__image img {
+  width: 100%;
 }
