--- a/scss/_benefits.scss
+++ b/scss/_benefits.scss
@@ -1,5 +1,5 @@
 .benefits {
-	padding-bottom: 18%;
+	padding-bottom: 9.5%; //180px
 	&__body {
 	}
 
@@ -28,6 +28,7 @@
 		border: 1px solid transparent;
 		line-height: 160%;
 		font-weight: 700;
+
 		&:hover {
 			border: 1px solid #ff3f3a;
 			border-radius: 4px;
@@ -42,12 +43,40 @@
 	&__tab-list {
 	}
 	&__tab-item {
-		background: rgb(74, 74, 189);
-		height: 200px;
-		color: azure;
-		font-size: 40px;
+		display: none;
+		align-items: center;
+		justify-content: space-between;
+		&.active {
+			display: flex;
+		}
 	}
 }
 .hidden {
 	display: none;
+}
+
+.tab-item {
+	&__text {
+		flex: 0 1 40.5%;
+	}
+
+	&__title {
+		font-weight: 900;
+		font-size: rem(32);
+		line-height: 130%;
+		color: #1e212c;
+		margin-bottom: rem(24);
+	}
+
+	&__descr {
+		line-height: 160%;
+	}
+
+	&__image {
+		flex: 0 1 50%;
+		max-height: 400px;
+		img {
+			width: 100%;
+		}
+	}
 }
