--- a/scss/_benefits.scss
+++ b/scss/_benefits.scss
@@ -9,7 +9,7 @@
 
 	&__title {
 		text-align: center;
-		margin-bottom: rem(60);
+		@include adaptive-value("margin-bottom", 60, 15, 0);
 	}
 
 	&__tabs {
@@ -18,6 +18,10 @@
 	&__tab-link-list {
 		display: flex;
 		margin-bottom: rem(60);
+		@media (max-width: em(768)) {
+			flex-direction: column;
+			margin-bottom: rem(15);
+		}
 	}
 
 	&__tab-link {
@@ -28,6 +32,9 @@
 		border: 1px solid transparent;
 		line-height: 160%;
 		font-weight: 700;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
 		&:hover {
 			border: 1px solid #ff3f3a;
@@ -37,6 +44,9 @@
 			border: 1px solid #ff3f3a;
 			border-radius: 4px;
 			color: #ff3f3a;
+			svg {
+				fill: #ff3f3a;
+			}
 		}
 	}
 
@@ -56,8 +66,14 @@
 }
 
 .tab-item {
+	@media (max-width: em(768)) {
+		flex: 0 1 50%;
+	}
 	&__text {
 		flex: 0 1 40.5%;
+		@media (max-width: em(768)) {
+			flex: 1 1 100%;
+		}
 	}
 
 	&__title {
@@ -75,8 +91,14 @@
 	&__image {
 		flex: 0 1 50%;
 		max-height: 400px;
-		img {
-			width: 100%;
+		@media (max-width: em(768)) {
+			display: none;
 		}
 	}
+}
+.svg {
+	fill: #1e212c;
+	width: 15px;
+	height: 15px;
+	margin-right: 20px;
 }
