added section Team

--- a/css/style.css
+++ b/css/style.css
@@ -1481,3 +1481,144 @@ body {
   padding-bottom: 100px;
   background: url("../img/team/bg.png") center/cover no-repeat;
 }
+.team__body {
+  position: relative;
+}
+.team__title {
+  margin-bottom: 60px;
+}
+.team__slider {
+  position: static;
+}
+.swiper-button-prev {
+  top: 60px;
+  right: 50px;
+  left: auto;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.swiper-button-prev:hover {
+  background: #ff3f3a;
+}
+.swiper-button-prev:hover::after {
+  background: url("../img/icon/arrow-left.svg") center/cover no-repeat;
+}
+
+.swiper-button-prev::after {
+  content: "";
+  background: url("../img/icon/arrow-left-gray.svg") center/cover no-repeat;
+  width: 18px;
+  height: 12px;
+}
+.swiper-button-prev::after:hover {
+  background: url("../img/icon/arrow-left.svg") center/cover no-repeat;
+}
+
+.swiper-button-next {
+  top: 60px;
+  right: 0;
+  left: auto;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.swiper-button-next:hover {
+  background: #ff3f3a;
+}
+.swiper-button-next:hover::after {
+  background: url("../img/icon/arrow-right.svg") center/cover no-repeat;
+}
+
+.swiper-button-next::after {
+  content: "";
+  background: url("../img/icon/arrow-right-gray.svg") center/cover no-repeat;
+  width: 18px;
+  height: 12px;
+}
+
+.team-slide__card {
+  max-height: 340px;
+  background: #ffcf2d;
+  padding: 20px 20px 0px 20px;
+  position: relative;
+  transition: 0.3s;
+  margin-bottom: 16px;
+}
+.team-slide__card:hover {
+  transition: 0.3s;
+}
+.team-slide__card:hover:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(30, 33, 44, 0) 43.9%, rgba(30, 33, 44, 0.03) 55.21%, rgba(30, 33, 44, 0.33) 68.73%, rgba(30, 33, 44, 0.56) 76.17%, rgba(30, 33, 44, 0.768225) 83.75%, rgba(30, 33, 44, 0.92) 91.49%, #1e212c 100%);
+  border-radius: 4px;
+}
+.team-slide__card:hover > .team-slide__social {
+  display: flex;
+  visibility: visible;
+}
+@media (max-width: 1023px) {
+  .team-slide__card {
+    min-height: 100%;
+  }
+}
+.team-slide__photo {
+  position: relative;
+  padding-bottom: 155.5%;
+}
+@media (max-width: 1024px) {
+  .team-slide__photo {
+    padding-bottom: 100%;
+  }
+}
+.team-slide__photo img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.team-slide__social {
+  display: none;
+  visibility: hidden;
+  position: absolute;
+  bottom: 20px;
+  right: 14px;
+}
+.team-slide__link {
+  margin: 0 6px;
+  z-index: 5;
+}
+.team-slide__text {
+  text-align: center;
+}
+.team-slide__name {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 150%;
+  color: #424551;
+  margin-bottom: 4px;
+}
+.team-slide__proff {
+  line-height: 160%;
+}
+
+.team-svg {
+  fill: #fff;
+  opacity: 0.6;
+  width: 16px;
+  height: 16px;
+}
+.team-svg:hover {
+  opacity: 1;
+}
